--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,95 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: hotpink;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root{
+  padding: 10vh 0;
+}
+
+.birthday-list{
+  margin: auto;
+  padding: 2rem;
+
+  background-color: #fff;
+  border-radius: .25rem;
+  max-width: 70vw;
+  width: 560px;
+  min-height: 40vh;
+  box-shadow: 0 .25rem 1rem .1rem rgba(0,0,0,.3);
+
+}
+
+.birthday-list>p{
+  font-size: 2rem;
+  font-weight: lighter;
+  margin-bottom: 1rem;
+  letter-spacing: 2px;
+  text-align: center
+}
+
+.birthday-list>button{
+  border: none;
+  background-color: hotpink;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.5rem;
+  letter-spacing: .5rem;
+  border-radius: .5rem;
+  color: #fff;
+  cursor: pointer;
+  transition: .2s all ease;
+}
+
+.birthday-list>button:hover{
+  background-color: pink;
+  color: hotpink;
+}
+
+
+.birthday-item{
+  display: grid;
+  grid-template-columns: auto 5fr 1fr;
+  column-gap: 0.75rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+}
+
+.birthday-item img{
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.birthday-item h4{
+  margin-bottom: .35rem;
+}
+
+.birthday-item p{
+  margin-bottom: 0;
+}
+
+.birthday-item>button{
+  padding: .25rem .5rem;
+  color: deeppink;
+  border: 2px solid deeppink;
+  background-color: transparent;
+  border-radius: .5rem;
+  cursor: pointer;
+  transition: .2s all;
+}
+
+.birthday-item>button:hover{
+  color: #fff;
+  background-color: deeppink;
+  font-weight: bolder;
 }
